# lilwm

./: .gitignore  .gitmodules  CMakeLists.txt  config.c  config.h  lilwm.c  lilwm.desktop  lilwmrc  pickdesktop  rundesktop  test.c
doc/: lilui.3  lilwm.1  lilwmrc.5
lilui/: basictheme.res  lilui.c  lilui.h  list.h  widgets.c
lilwm/: config.c  keys.c  keys.h  lilwm.c  tagged.c  tagged.h
listpicker/: levenshtein.c  levenshtein.h  listpicker.c
msgbox/: msgbox.c
